--- a/HTML/Day1.html
+++ b/HTML/Day1.html
@@ -24,6 +24,7 @@
     </div>
     <!-- paragraph -->
     <!-- Semantic and non semantc discussion -->
+    <!-- <b> for bold <i> for ilatics  non semantic  -->
     <p>"I m a paragraph <strong>I am Bold </strong> <em>I am Italics</em>"</p>
 
     <!-- Image -->
@@ -31,6 +32,7 @@
       src="/public/HTMLImages/Tech workspace with code focus.png"
       height="500"
       width="800"
+      alt="tech image"
     />
     <!-- button tags -->
     <div>
@@ -40,3 +42,5 @@
   </body>
 </html>
 <!-- Task 1  create a simple html page - it should have all the tags we discussed  -->
+
+<!-- Semantic --- <aside> </aside> , <nav></nav> , <header></header> , <footer></footer> , <section></section> -->
