--- a/HTML/Day3.html
+++ b/HTML/Day3.html
@@ -24,7 +24,7 @@
       </p>
     </div>
     <!--anchor tag - used to give link   -->
-    <p>check <a href="https://www.google.com/">Link</a></p>
+    <p>check <a href="https://www.google.com/">Spiderman</a></p>
     <!-- Lists  -- 1. ordered 2. Unordered List -->
 
     <ol>
@@ -50,9 +50,9 @@
 
 
 <!-- Tables -->
-<table style="border: 2px solid blue;">
+<table style="border: 2px dotted blue;">
   <thead>
-    <th>Sr. No.</th>
+    <th>Sr.No.</th>
     <th>Name</th>
     <th>Contact</th>
     <th>email</th>
@@ -67,9 +67,7 @@
     <td>e@k.coms</td>
     </tr>
     <tr>
-      <td>
-        02
-      </td>
+      <td>02</td>
        <td>Sonam1</td>
     <td>78798898811</td>
     <td>e@k.comsss</td>
