--- a/HTML/Day3.html
+++ b/HTML/Day3.html
@@ -97,6 +97,8 @@
 </form>
 
 
-
+ <a href="https://example.com" target="_self"
+      >Open with _self (opens within a Iframe window)</a
+    >
   </body>
 </html>
