--- a/HTML/Day4-AudioVideo.html
+++ b/HTML/Day4-AudioVideo.html
@@ -21,7 +21,7 @@
     - preload → auto | metadata | none
   -->
 
-    <audio controls preload="metadata">
+    <audio autoplay controls preload="metadata">
       <!-- 
       <source> tag is used to define media file.
       We can add multiple source formats.
